--- a/src/styles/modules/landing-page.scss
+++ b/src/styles/modules/landing-page.scss
@@ -1,4 +1,4 @@
-/*================ Overlay ================*/
+/*================ Landing Page ================*/
 
 .block-wrapper {
     position: relative;
